add: authentication logic